--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -10,6 +10,11 @@
   padding: 0;
 }
 
+body,
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
